# FastWrite

./: .gitignore  CODE_OF_CONDUCT.md  README.md  contributing.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
FastWrite/: rouge.py
QuickScript/: bleu.py
