[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QuickScript"
version = "1.0.0"
description = "A module for generating AI-based code documentation and data flow diagrams."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}  # Or specify a license string, e.g., "MIT"
authors = [
    { name="R-G-KJSIT", email="r.giridhar@somaiya.edu" }
]

[project.urls]
Homepage = "https://github.com/R-G-KJSIT/QuickScript"
Repository = "https://github.com/R-G-KJSIT/QuickScript"

dependencies = [
    "groq",
    "google-generativeai",
    "requests",
    "nltk",
    "python-dotenv"
]

